JournalApp/wwwroot/app.css
body {
	user-select: none;
}

	body::-webkit-scrollbar {
		display: none;
	}

#splash-screen {
	display: flex;
	align-items: center;
	justify-content: center;
	background-color: #776be7;
	position: fixed;
	width: 100%;
	height: 100%
}

#loading-text {
	font-family: sans-serif;
	font-size: 8vw;
	color: white;
}

button {
	text-transform: none !important;
}

.page-header {
	display: flex;
	flex-direction: row;
	align-items: center;
	gap: 0.5em;
	background-color: var(--mud-palette-primary);
	height: calc(var(--mud-appbar-height) - var(--mud-appbar-height) / 4);
	box-shadow: none;
}

#main-header {
	top: 0;
	position: sticky;
	background-color: var(--mud-palette-primary-lighten);
	z-index: 1000;
}

#main-body {
	display: flex;
	justify-content: center;
}

#main-timeline {
	flex-grow: 1;
	max-width: 960px;
	margin: 0.5em 1em;
	margin-bottom: 15em;
	gap: 2em;
}

.data-point-group {
	display: flex;
	flex-direction: column;
	gap: 1em;
}

.data-point-container {
	display: flex;
	flex-wrap: wrap;
	flex-grow: 1;
	align-items: center;
	justify-items: center;
	column-gap: 0.5em;
}

.data-point-header {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
}

.data-point-view {
	display: flex;
	flex-grow: 1;
	min-height: 2em;
}

.switcher {
	display: flex;
	justify-content: center;
	align-items: center;
}

.switcher-header {
	display: flex;
	justify-content: center;
	width: 55vw;
}

.mood-grid {
	display: flex;
	flex-direction: column;
	gap: 1em;
}

.mood-grid-month-header {
	display: flex;
	justify-content: center;
}

.mood-grid-month {
	display: flex;
	flex-direction: column;
}

.mood-blocks-month {
	display: flex;
	flex-direction: column;
	flex: 1 1 0;
}

.mood-blocks-week {
	display: flex;
	flex-direction: row;
	justify-content: center;
	flex: 1 1 0;
}

.mood-block-container {
	display: flex;
	flex: 1 1 0;
	margin: 0.125em;
	padding: 0.25em;
	min-width: 3em;
	max-width: 6em;
}

.mood-block {
	display: flex;
	width: 100%;
	aspect-ratio: 1 / 1;
}

.worksheet-group-list {
	display: flex;
	flex-direction: column;
	gap: 2em;
}

.worksheet-group {
	display: flex;
	flex-direction: column;
}

.worksheet-group-items {
	display: flex;
	flex-direction: column;
	gap: 1em;
}

.worksheet-group-toc {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	gap: 0.5em;
}

.worksheet-group-toc-item {
	white-space: nowrap;
	align-items: start;
}

.worksheet-view {
	display: flex;
	flex-direction: column;
	align-items: start;
}

.safety-plan-items-container {
	display: flex;
	flex-direction: column;
	gap: 1em;
}

.trends-container {
	display: flex;
	flex-direction: column;
	gap: 1em;
}

.trend-view {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
}

.category-view-compact {
	display: flex;
	flex-direction: row;
	align-items: center;
	gap: 0.1em;
}

.break-flex-column {
	flex-basis: 100%;
	width: 0;
}

.mud-dialog-title {
	padding: 0.5em 1em !important;
}

	.mud-dialog-title:has(.page-header) {
		padding: 0 !important;
		position: sticky;
		top: 0;
		background-color: var(--mud-palette-surface);
	}

.mud-dialog-content {
	max-width: 960px;
	margin: 0 auto;
	padding: 0.5em 1em !important;
}

.mud-dialog-fullscreen {
	max-width: 100%;
	max-height: 100% !important;
	border-radius: 0;
	overflow-y: auto !important;
	padding-bottom: 15em;
}

.mud-form {
	display: flex;
	flex-direction: column;
	gap: 1em;
}

.mud-input {
	margin: 0 !important;
}

.mud-input-control-input-container {
	margin: 0 !important;
}

	.mud-input-control-input-container:has(.mud-input-label) {
		padding: 0.75em 0 0 0 !important;
		margin: 0.375em 0 0 0 !important;
	}

.mud-input-root-outlined {
	margin: 0.5em !important;
}

#blazor-error-ui {
	background: darkorange;
	bottom: 0;
	display: none;
	left: 0;
	padding: 1.25rem;
	position: fixed;
	width: 100%;
	z-index: 1000;
}

.status-bar-safe-area {
	display: none;
}

@supports (-webkit-touch-callout: none) {
	.status-bar-safe-area {
		display: flex;
		position: sticky;
		top: 0;
		height: env(safe-area-inset-top);
		background-color: #f7f7f7;
		width: 100%;
		z-index: 1;
	}

	.flex-column, .navbar-brand {
		padding-left: env(safe-area-inset-left);
	}
}

